// Copyright 2021 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "validate/validate.proto";

message AnalysisMetadata {
    int64 startTime  = 1 [(validate.rules).int64.gt = 0];
    int64 duration  = 2 [(validate.rules).int64.gt = 0];
    int64 interval = 3 [(validate.rules).int64.gt = 0];
    string query = 4 [(validate.rules).string.min_len = 1];
}
